--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -21,6 +21,8 @@
     </div>
     <div id='holder' >
       <h2>Example-SMART-App</h2>
+      <h2>GREETINGS WORLD. THIS IS MY SMART-ON-FHIR APPLICATION.</h2>
+      <h2>My first one.</h2>
 
       <h2>Patient Resource</h2>
       <table>
